terminando la seccion 4

--- a/PlatziVideo/src/assets/styles/components/Header.scss
+++ b/PlatziVideo/src/assets/styles/components/Header.scss
@@ -56,3 +56,17 @@ ul:hover {
     margin-right: 8px;
     width: 40px;
 }
+
+.main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 300px;
+    border-radius: 0px 0px 40px 40px;
+}
+
+.main__title {
+    color: white;
+    font-size: 25px;
+}
